--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.5.10",
+    "@astrojs/cloudflare": "^11.0.0",
+    "@astrojs/db": "^0.11.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@lucia-auth/adapter-drizzle": "^1.0.7",
     "astro": "^4.5.9",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.3"
