--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ]
+    }
+  },
   "extends": "astro/tsconfigs/strict"
 }
